--- a/css/style.css
+++ b/css/style.css
@@ -2,30 +2,16 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
+/* Containers */
+
 .container-wrapper {}
 
-.container-wrapper--red{
+.container-wrapper--red {
     background-color: #f05f40;
     color: white;
-    
 }
 
-.alert-container .col-12 {
-    padding-left: 0;
-    padding-right: 0;
-}
-
-
-.site-wide-alert {
-    color: #544600;
-    background-color: #eec802;
-    border-color: #eec802;
-    padding: 5px 15px;
-    margin-bottom: 0;
-    border: 1px solid transparent;
-    border-radius: 0;
-}
-
+.alert-container {}
 
 .callout-container {
     height: 100vh;
@@ -50,6 +36,11 @@ body {
     height: 100%;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
 }
 
 /* Navbar */
@@ -107,21 +98,6 @@ body {
     color: #d0d0d0;
 }
 
-/*  page headers */
-
-.page-header {
-    margin-bottom: 0;
-    border-bottom: 0;
-    text-align: center;
-
-}
-.page-header h2 {
-    margin-top: 0;
-}
-
-.quotes .page-header {
-    margin-bottom: 25px;
-}
 /* Block dividers */
 
 .block-divider {
@@ -135,21 +111,13 @@ body {
     background-color: #f05f40;
 }
 
-.block-divider--white{
+.block-divider--white {
     background-color: white;
 }
 
 .block-divider--short {
     width: 35px;
 }
-
-/* Content containers */
-
-.content-container {
-    padding-top: 75px;
-    padding-bottom: 75px;
-}
-
 
 /* Buttons */
 
@@ -174,7 +142,44 @@ body {
     color: white;
 }
 
-.feature{
+/* Alert */
+
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    color: #544600;
+    background-color: #eec802;
+    border-color: #eec802;
+    padding: 5px 15px;
+    margin-bottom: 0;
+    border: 1px solid transparent;
+    border-radius: 0;
+}
+
+/* Page Headers */
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
+/* Quotes */
+
+.quotes .page-header {
+    margin-bottom: 25px;
+}
+
+/* Features */
+
+.feature {
     text-align: center;
     margin-bottom: 40px;
 }
@@ -185,12 +190,12 @@ body {
     line-height: 45px;
 }
 
-.feature .btn{
+.feature .btn {
     background-color: white;
     border-color: white;
     border-radius: 15px;
-    color: #f05f40;
-    margin-top: 10px;
-    font-weight: bold;
     min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
